# Nej

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  generate_emoji_header.py
AI/: LINTING_PROCESS.md  build_process.md  coding_guidelines.md  linting_formatting.md  project_scaffolding.md  requirements.md  technical_details.md  testing_process.md
src/: CMakeLists.txt  core.cpp  core.h  emoji_data.h  main.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/integration/: test_line_by_line.sh
